# astc-encoder

./: CMakeLists.txt
Source/: CMakeLists.txt  astc_codec_internals.h  astc_image_load_store.cpp  astc_ktx_dds.cpp  astc_stb_tga.cpp  exr_to_htga.cpp  imgdiff.cpp  mathlib.cpp  softfloat.h  vectypes.h
